--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
 [metadata]
 description-file = README.txt
 url = https://github.com/muckamuck/stackility
+
+[bumpversion]
+current_version = 0.1.3
+commit = True
+tag = False
