--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,10 @@ current_version = 0.1.4
 commit = True
 tag = False
 
+[bumpversion:file:setup.py]
+
+[bumpversion:file:stackility/__init__.py]
+
 [metadata]
 description-file = README.txt
 url = https://github.com/muckamuck/stackility
-
