Put the version in the command script

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ tag = False
 
 [bumpversion:file:stackility/__init__.py]
 
+[bumpversion:file:stackility/command.py]
+
 [metadata]
 description-file = README.txt
 url = https://github.com/muckamuck/stackility
