Implement getting secrets/parameters from SSM: something=[ssm:something]

--- a/example/simple_vpc/example.ini
+++ b/example/simple_vpc/example.ini
@@ -2,7 +2,7 @@
 template=template.json
 bucket=cmrsol-artifacts
 stack_name=Stackility-VPC-Example
-region=us-east-1
+region=us-west-2
 
 [tags]
 OWNER=nobody@gmail.com
@@ -13,4 +13,5 @@ Name=THE_VPC
 [parameters]
 theCIDR=10.22.0.0/16
 subnetCIDROne=10.22.10.0/24
-secret=[ask]
+foo=[ssm:foo_version]
+answer=[ssm:answer]
