--- a/example/simple_vpc/example.ini
+++ b/example/simple_vpc/example.ini
@@ -13,5 +13,6 @@ Name=THE_VPC
 [parameters]
 theCIDR=10.22.0.0/16
 subnetCIDROne=10.22.10.0/24
+bar=set_value
 foo=[ssm:foo_version]
 answer=[ssm:answer]
