An example of how to use the meta parameters

--- a/example/simple_vpc/example.ini
+++ b/example/simple_vpc/example.ini
@@ -16,3 +16,7 @@ subnetCIDROne=10.22.10.0/24
 bar=set_value
 foo=[ssm:foo_version]
 answer=[ssm:answer]
+
+[meta-parameters]
+foo=foo-stuff
+bar=bar-stuff
