placeholder for the analysis section

--- a/example/simple_vpc/example.ini
+++ b/example/simple_vpc/example.ini
@@ -20,3 +20,7 @@ answer=[ssm:answer]
 [meta-parameters]
 foo=foo-stuff
 bar=bar-stuff
+
+[xanalysis]
+template=http://localhost:8080/analysis/template
+xtags=http://localhost:8080/analysis/tags
