slightly better smoke test

--- a/example/simple_vpc/json/example.ini
+++ b/example/simple_vpc/json/example.ini
@@ -1,6 +1,6 @@
 [environment]
 template=template.json
-bucket=cmrsol-artifacts
+bucket=specify-a-bucket
 stack_name=Stackility-VPC-Example
 region=us-west-2
 
@@ -21,6 +21,6 @@ answer=[ssm:answer]
 foo=foo-stuff
 bar=bar-stuff
 
-[xanalysis]
-template=http://localhost:8080/analysis/template
-xtags=http://localhost:8080/analysis/tags
+# [analysis]
+# template=http://localhost:8080/analysis/template
+# tags=http://localhost:8080/analysis/tags
