--- a/example/simple_vpc/yaml/template.yml
+++ b/example/simple_vpc/yaml/template.yml
@@ -1,4 +1,3 @@
----
 AWSTemplateFormatVersion: '2010-09-09'
 Description: VPC thing
 Parameters:
@@ -12,11 +11,11 @@ Parameters:
   bar:
     Description: Bar
     Type: String
-    Default: default_value
+    Default: '{{bar}}'
   baz:
     Description: Baz
     Type: String
-    Default: default_baz_value
+    Default: '{{foo}}'
   subnetCIDROne:
     Description: The CIDR block of our new friend
     Type: String
@@ -41,4 +40,3 @@ Resources:
       MapPublicIpOnLaunch: 'false'
       VpcId:
         Ref: theVPC
-
